[project]
name = "mechababynodesearch"
description = "Enhance ComfyUI workflow by providing powerful node search, attribute search, and port navigation features with Ctrl+F shortcut support."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/MechaBabyAi/ComfyUI-MechaBabyNodeSearch"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/MechaBabyAi/ComfyUI-MechaBabyNodeSearch/wiki"
"Bug Tracker" = "https://github.com/MechaBabyAi/ComfyUI-MechaBabyNodeSearch/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-MechaBabyNodeSearch"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

