[project]
name = "ComfyUI-MechaBabyNodeSearch"
description = "Enhance ComfyUI workflow with powerful node search, attribute search, and port navigation (Ctrl+F, F1)."
version = "1.6.2"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MechaBaby" }]
keywords = ["comfyui", "search", "navigation", "teleport"]

[project.urls]
Repository = "https://github.com/MechaBabyAi/ComfyUI-MechaBabyNodeSearch"
"Bug Tracker" = "https://github.com/MechaBabyAi/ComfyUI-MechaBabyNodeSearch/issues"

[tool.comfy]
PublisherId = "mechbaby"
DisplayName = "MechaBaby Node Search"
Icon = ""
